// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`transform should transform in a model entity 1`] = `
{
  "email": "john.mclane@proton.mail",
  "firstName": "John",
  "hospital": {
    "id": 3,
    "name": "",
  },
  "id": 2,
  "lastName": "Mc Lane",
  "resetPassword": undefined,
  "role": "OPERATOR_ACT",
  "scope": undefined,
}
`;

exports[`untransform should untransform in a Knex entity even without id and password 1`] = `
{
  "email": "doc.brown@yahoo.com",
  "first_name": "Doc",
  "hospital_id": null,
  "last_name": "Brown",
  "reset_password": undefined,
  "role": "OPERATOR_ACT",
  "scope": null,
}
`;

exports[`untransform should untransform in a Knex entity even without id and wih a password 1`] = `
{
  "email": "doc.brown@yahoo.com",
  "first_name": "Doc",
  "hospital_id": null,
  "id": 2,
  "last_name": "Brown",
  "password": "12345678",
  "reset_password": undefined,
  "role": "OPERATOR_ACT",
  "scope": null,
}
`;

exports[`untransform should untransform in a Knex entity with an id and without a password 1`] = `
{
  "email": "marty.macfly@gmail.com",
  "first_name": "Marty",
  "hospital_id": null,
  "id": 1,
  "last_name": "Mac Fly",
  "reset_password": undefined,
  "role": "REGIONAL_SUPERVISOR",
  "scope": "[1,3,6]",
}
`;
